[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-analyze-seq-further"
version = "0.2.0"
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['BASE', 'brain', 'antibody']
dependencies = [
    'lib-dzne-math>=0.2.3',
    'lib-dzne-seq>=0.2.2',
    'lib-dzne-filedata>=0.5.0',
]
requires-python = ">=3.11"
