[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib_dzne_analyze_seq_further"
description = """\
This package was created to contain all parts of the aBASE-like sequence read analysis \
that are self-contained and needed to be easily accessed. 
Currently it only holds the regions-function. """
version = "0.2.5"
readme = "README.rst"
authors = [
    { name = "Johannes", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['BASE', 'brain', 'antibody']
dependencies = [
    'lib-dzne-math>=0.2.3',
    'lib-dzne-seq>=0.2.2',
    'lib-dzne-filedata>=0.5',
]
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/lib-dzne-analyze-seq-further/#files"
Source = "https://github.com/johannes-programming/lib_dzne_analyze_seq_further"
